--- a/components/HeaderSection/HeaderSection.module.css
+++ b/components/HeaderSection/HeaderSection.module.css
@@ -53,8 +53,7 @@
 }
 
 .content {
-  min-height: 70vh;
-
+  height: 70vh;
   text-align: center;
   margin-top: 5em;
   grid-area: header-content;
@@ -98,11 +97,14 @@
   display: none;
 }
 @media (max-width: 992px) {
+  .header {
+    min-height: 0vh;
+  }
   .bgVideo {
     height: 500px;
   }
   .content {
-    height: 82vh;
+    height: 45vh;
   }
   .navMobile {
     display: block;
