--- a/components/ContactSection/ContactSection.module.css
+++ b/components/ContactSection/ContactSection.module.css
@@ -3,3 +3,13 @@
   padding: 3em;
   color: white;
 }
+.infoPersonal {
+  display: flex;
+  justify-content: space-around;
+}
+.info {
+  text-align: center;
+  margin: 3em;
+  color: white;
+  display: block;
+}
