--- a/components/AboutSection/AboutSection.module.css
+++ b/components/AboutSection/AboutSection.module.css
@@ -31,3 +31,11 @@
   color: white;
   transition: all 0.3s ease;
 }
+.acerca {
+  margin-top: 2em;
+}
+@media (max-width: 992px) {
+  .acerca {
+    margin-top: 10em;
+  }
+}
