--- a/components/ProjectSection/ProjectSection.module.css
+++ b/components/ProjectSection/ProjectSection.module.css
@@ -1,26 +1,16 @@
-.container {
-  margin: 5em;
-  display: flex;
-  flex-wrap: wrap;
-  margin: 5em auto;
-  justify-content: space-around;
+.main {
+  width: 85%;
+  margin: 0 auto;
 }
-.project {
-  width: 350px;
-  display: flex;
 
-  overflow: hidden;
-  cursor: pointer;
-  margin: 0 10px 10px 10px;
-}
 .front {
   z-index: -1;
 }
 .back {
-  width: 350px;
-
+  width: 354px;
+  border-radius: 35px;
   overflow: hidden;
-  height: 224px;
+  height: 280px;
   z-index: -1;
   background-color: #242a35;
   position: absolute;
@@ -49,18 +39,135 @@
 }
 .tec {
   display: flex;
+  justify-content: center;
+
   text-align: center;
   margin-left: 25px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  flex-wrap: wrap;
+  margin: 0 auto;
 }
 .tec p {
-  font-size: 0.7em;
+  font-size: 0.8em;
 }
 
-@media (max-width: 370px) {
+.imageProj {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: 0.5s;
+}
+
+.container {
+  /* margin: 5em; */
+  display: inline-flex;
+  flex-wrap: wrap;
+  margin: 5em auto;
+  align-self: center;
+}
+.cardImage {
+  height: 100%;
+  width: 100%;
+
+  /* border: 5px solid red; */
+  /* border: 1px solid red; */
+  box-shadow: opacity 0.5s;
+
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  width: 100%;
+  height: 100%;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  transition: 0.5s;
+  position: relative;
+}
+
+.project {
+  width: 30em;
+  height: 15em;
+  display: flex;
+  border-radius: 15px;
+  overflow: hidden;
+  cursor: pointer;
+  margin: 0 10px 40px 10px;
+}
+
+.info {
+  background-color: #242a35;
+  opacity: 0.9;
+  position: absolute;
+  width: 100%;
+  height: 7em;
+  bottom: 0;
+}
+.info h1 {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: white !important;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  font-family: var(--raleway);
+  margin: 0.5em;
+}
+
+.info p {
+  font-size: 1em;
+  color: white !important;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  font-family: var(--raleway);
+  margin: 0.5em;
+}
+
+.tecnology {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-left: 25px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  gap: 0.5em;
+}
+
+.tecnology span {
+  font-size: 0.8em;
+  color: white;
+}
+
+@media screen and (max-width: 768px) {
   .project {
-    width: 300px;
+    width: 18em;
+    margin: 0 auto 40px auto;
   }
-  .back {
-    width: 300px;
+
+  .info {
+    opacity: 1 !important;
+    transform: translateY(0) !important;
+  }
+
+  .info h1 {
+    font-size: 1.2em;
+  }
+
+  .info p {
+    font-size: 0.8em;
+  }
+
+  .tecnology {
+    font-size: 0.9rem;
   }
 }
